# DivinityMachine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bimage.hpp  dds.hpp  main.cpp
.github/workflows/: build.yml
